tm/tests/snapshots/cli_items__demote_json.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "est_min": 120,
  "id": "m4",
  "stamps": [
    "W37"
  ]
}
