tm/tests/snapshots/cli_items__edit_json.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "changes": [
    {
      "field": "ci",
      "from": "2",
      "to": "3"
    },
    {
      "field": "est",
      "from": "30m",
      "to": "45m"
    },
    {
      "field": "loc",
      "from": "",
      "to": "out"
    }
  ],
  "id": "a1",
  "line": "- [ ] 3 45m Insurance claim for the bike loc:out  ^a1"
}
