tm/tests/snapshots/cli_items__edit_json_kernel_path.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "changes": [
    {
      "field": "est",
      "from": "30m",
      "to": "45m"
    },
    {
      "field": "loc",
      "from": "",
      "to": "out"
    },
    {
      "field": "due",
      "from": "",
      "to": "2026-10-01"
    }
  ],
  "id": "a1",
  "line": "- [ ] 2 30m Insurance claim for the bike est:45m loc:out due:2026-10-01  ^a1"
}
