tm/tests/snapshots/cli_items__event_json.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "id": null,
  "name": "reply",
  "resolved": [
    "a4"
  ]
}
