tm/tests/snapshots/cli_items__move_json.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "from": "backlog.md",
  "id": "a1",
  "to": "week/2026-W37.md"
}
