tm/tests/snapshots/cli_items__routine_done_json.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "actual_min": 18,
  "inst": "2026-09-07",
  "item": "lunch",
  "status": "done"
}
