tm/tests/snapshots/cli_items__skip_json.snap
---
source: tm/tests/cli_items.rs
expression: json
---
{
  "actual_min": null,
  "inst": "2026-09-07",
  "item": "lunch",
  "status": "skipped"
}
